Revert "Fix mobile footer gap: flex body, remove margin-top on footerSection"
This reverts commit 2c0361a629bdbcfac02eb83f0be75d750e14e4c0.

--- a/CSS/Forside.css
+++ b/CSS/Forside.css
@@ -317,9 +317,6 @@ p{
 
   body {
     background: transparent;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
   }
 
   .Hamburger {
@@ -423,12 +420,9 @@ p{
     font-size: 2vw;
   }
 
-  footer {
-    margin-top: auto;
-  }
-
   .footerSection {
     background-color: #222222;
+    margin-top: 8%;
   }
 }
 
@@ -442,9 +436,6 @@ p{
 
   body {
     background: transparent;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
   }
 
   .Hamburger {
@@ -572,13 +563,10 @@ p{
     font-size: 3.5vw;
   }
 
-  footer {
-    margin-top: auto;
-  }
-
   .footerSection {
     display: flex;
     justify-content: center;
+    margin-top: 40%;
     background-color: #222222;
   }
 
