--- a/CSS/Kontakt.css
+++ b/CSS/Kontakt.css
@@ -233,9 +233,6 @@ p{
     body {
         background: transparent;
         margin-top: clamp(80px, 13vh, 120px);
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
     }
 
     .Hamburger {
@@ -270,12 +267,9 @@ p{
         font-size: 2vw;
     }
 
-    footer {
-        margin-top: auto;
-    }
-
     .footerSection {
         background-color: #222222;
+        margin-top: 8%;
     }
 }
 
@@ -290,9 +284,6 @@ p{
     body {
         background: transparent;
         margin-top: clamp(80px, 13vh, 120px);
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
     }
 
     .Hamburger {
@@ -343,13 +334,9 @@ p{
     .footerSection {
         display: flex;
         justify-content: center;
+        margin-top: 40%;
         background-color: #222222;
     }
-
-    footer {
-        margin-top: auto;
-    }
-
     footer h3 {
         font-size: 3.5vw;
         color: #ff2d55;
